R2.20.11   2020/03/10   Kukhee Kim
           * change evrClient macro (EVENT to EVRCLIENT)
           * build with evrClient R1.5.0 (support evrClient)

R2.20.10   2020/02/07   Kukhee Kim
           * build against evrClient R1.5.0 (support evrClent)

R2.20.9    2019/09/11   Kukhee Kim
           * build against evrClient R1.4.7 from support_evrClient branch

R2.20.8    2018/11/16   Kukhee Kim for Till Strauman
           drvPadUdpComm.c: relax default values for nsamples_dynamic,
           nchannels_dynamic: if no peer answers the initial query
           (e.g., because it is not on-line yet) then assume it is OK
           to accept the values requested by the host-side.

R2.20.7    2018/11/13   Kukhee Kim for Till Straumman
           * fidProcess.c: Suppress error message when evrTimeGetFromPipeline fails
              An evrSupport record already provides that information.
           * build against evrClient R1.4.6 from support_evrClient branch

R2.20.6    2018/11/02   Kukhee Kim
           * build against evrClient R1.4.6 from support_evrClient branch

R2.20.5    2018/10/16   Kukhee Kim
           * build against evrClient R1.4.5 from support_evrClient branch

R2.20.4    2018/08/18   Kukhee Kim
           * build against evrClient R1.4.4 from support_evrClient branch

R2.20.3    2018/06/28   Kukhee Kim
           * build against evrClient R1.4.3 from support_evrClient branch

R2.20.2    2018/05/16   Kukhee Kim
           * build against evrClient R1.4.2

R2.20.1:   2018/05/10   Kukhee Kim
           * align with 
             - evrClient   R1.4.1
             - timingApi   R0.6
             - miscUtil    R2.2.5


support_evrClient:  2018/05/10  Kukhee Kim
                    Branch out to support evrClient instead of event module.
                    It is a temporal solution until we fully use timingApi.
                    We are going to use tag name R2.20.x for this branch.



R2.11.5:    2018/04/18  T. Straumann
    EVENT    -> R4.3.5