@@ -1,3 +1,7 @@
+R2.20.11   2020/03/31   Kukhee Kim 
+           * force tagging
+           * implement a graceful shutdown for udpComm listener thread
+
 R2.20.11   2020/03/10   Kukhee Kim
            * change evrClient macro (EVENT to EVRCLIENT)
            * build with evrClient R1.5.0 (support evrClient)
